update code on swagger
